--- a/blogs.html
+++ b/blogs.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | Sandeep</title>
     <link href="styles.css" rel="stylesheet" />
+    <title>blogs | Sandeep</title>
 </head>
 
 <body>
     <nav class="navigation container">
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">home</a>
+                <a class="link" href="/">home</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">blogs</a>
+                <a class="link link-active" href="/blogs.html">blogs</a>
             </li>
             <li class="list-item-inline">
                 <a class="link link-resume"
@@ -29,33 +29,40 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">Sandeep Gopan</br><span class="heading-inverted"> Enginer @ NCR Corporation</span></h1>
+        <h1 class="hero-heading">read my <span class="heading-inverted">blogs</span></h1>
     </header>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>technologies</h1>
-            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
-        </div>
-    </section>
+    <ul class="list-non-bullet">
 
-    <section class="section">
-        <div class="container container-center">
-            <h1>projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
-        </div>
-    </section>
+        <li>
+            <article class="showcase-list container container-center ">
+                <h1>dummy blog one</h1>
+                <small>November, 2020</small>
+                <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th
+                    century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to
+                    'proper' Latin. It contains a series of real Latin words.</p>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-            </p>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
-        </div>
-    </section>
+                <a class="link link-primary" href="https://repl.it/@tanaypratap/quiz-on-marvel?embed=true">Read More</a>
+            </article>
+
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center ">
+                <h1>second dummy blog</h1>
+                <small>November, 2020</small>
+                <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different
+                    typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy
+                    the space which will later be filled with 'real' content. This is required when, for example, the
+                    final text is not yet available. Dummy text is also known as 'fill text'.</p>
+
+                <a class="link link-primary" href="https://repl.it/@tanaypratap/end-game?embed=true">Read More</a>
+            </article>
+
+        </li>
+
+    </ul>
+
 
     <footer class="footer">
         <div class="footer-header">Contact</div>
@@ -76,9 +83,6 @@
             </li>
         </ul>
     </footer>
-
-
-
 </body>
 
 </html>
