--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
-    <title>projects | Sandeep</title>
+    <title>projects | Sandeep Gopan</title>
 </head>
 
 <body>
