Main Commit to main

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="footer-header">Contact</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link-logo" href="https://github.com/sandeepgopan"><img src="/images/icons8-github.svg" /></a>
+                <a class="link-logo" href="https://github.com/sandeepgopan"><img src="images/icons8-github.svg" /></a>
 
             </li>
             <i class="logo-github"></i>
