--- a/blogs.html
+++ b/blogs.html
@@ -34,7 +34,7 @@
                     century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to
                     'proper' Latin. It contains a series of real Latin words.</p>
 
-                <a class="link link-primary" href="https://repl.it/@tanaypratap/quiz-on-marvel?embed=true">Read More</a>
+                <a class="link link-primary" href="https://repl.it/@sandeepgopan/quiz-on-marvel?embed=true">Read More</a>
             </article>
 
         </li>
@@ -48,7 +48,7 @@
                     the space which will later be filled with 'real' content. This is required when, for example, the
                     final text is not yet available. Dummy text is also known as 'fill text'.</p>
 
-                <a class="link link-primary" href="https://repl.it/@tanaypratap/end-game?embed=true">Read More</a>
+                <a class="link link-primary" href="https://repl.it/@sandeepgopan/end-game?embed=true">Read More</a>
             </article>
 
         </li>
