--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
                 <a class="link link-primary" href="https://hiq3h.csb.app/">Live Project</a>
                 <a class="link link-secondary"
-                    href="https://github.com/tanaypratap/neogcamp-lesson-five-assignments">View Source</a>
+                    href="https://github.com/sandeepgopan/neogcamp-lesson-five-assignments">View Source</a>
 
             </article>
 
@@ -49,7 +49,7 @@
                     meaning</p>
 
                 <a class="link link-primary" href="https://l4w0y.csb.app/">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/tanaypratap/neogcamp-practice-emoji-app">View
+                <a class="link link-secondary" href="https://github.com/sandeepgopan/neogcamp-practice-emoji-app">View
                     Source</a>
 
             </article>
@@ -77,7 +77,7 @@
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
                     translator to convert your text from English to Minion speak or Banana language.</p>
 
-                <a class="link link-primary" href="https://github.com/tanaypratap/neogcamp-banana-speak">Live
+                <a class="link link-primary" href="https://github.com/sandeepgopan/neogcamp-banana-speak">Live
                     Project</a>
                 <a class="link link-secondary" href="https://bananaspeakpractice.netlify.app/">View Source</a>
 
@@ -92,8 +92,8 @@
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
                     really knows you</p>
 
-                <a class="link link-primary" href="https://repl.it/@tanaypratap/end-game?embed=true">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/tanaypratap/neogcamp-cli-project-1">View
+                <a class="link link-primary" href="https://repl.it/@sandeepgopan/end-game?embed=true">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/sandeepgopan/neogcamp-cli-project-1">View
                     Source</a>
             </article>
 
@@ -105,9 +105,9 @@
                 <small>November, 2020</small>
                 <p>Do you know marvel cinematic universe? Let's play a quiz and see.</p>
 
-                <a class="link link-primary" href="https://repl.it/@tanaypratap/quiz-on-marvel?embed=true">Live
+                <a class="link link-primary" href="https://repl.it/@sandeepgopan/quiz-on-marvel?embed=true">Live
                     Project</a>
-                <a class="link link-secondary" href="https://github.com/tanaypratap/neogcamp-quiz-on-marvel">View
+                <a class="link link-secondary" href="https://github.com/sandeepgopan/neogcamp-quiz-on-marvel">View
                     Source</a>
 
             </article>
