--- a/blogs.html
+++ b/blogs.html
@@ -28,13 +28,11 @@
 
         <li>
             <article class="showcase-list container container-center ">
-                <h1>dummy blog one</h1>
-                <small>November, 2020</small>
-                <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th
-                    century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to
-                    'proper' Latin. It contains a series of real Latin words.</p>
+                <h1>Hello World</h1>
+                <small>March, 2023</small>
+                <p>This blog is my first medium blog after moving to Canada its all about what I do and stuff</p>
 
-                <a class="link link-primary" href="https://repl.it/@sandeepgopan/quiz-on-marvel?embed=true">Read More</a>
+                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2">Read More</a>
             </article>
 
         </li>
@@ -48,7 +46,7 @@
                     the space which will later be filled with 'real' content. This is required when, for example, the
                     final text is not yet available. Dummy text is also known as 'fill text'.</p>
 
-                <a class="link link-primary" href="https://repl.it/@sandeepgopan/end-game?embed=true">Read More</a>
+                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2">Read More</a>
             </article>
 
         </li>
