--- a/blogs.html
+++ b/blogs.html
@@ -32,7 +32,7 @@
                 <small>March, 2023</small>
                 <p>This blog is my first medium blog after moving to Canada its all about what I do and stuff</p>
 
-                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2">Read More</a>
+                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2" target="_blank" rel="noopener noreferrer">Read More</a>
             </article>
 
         </li>
@@ -46,7 +46,7 @@
                     the space which will later be filled with 'real' content. This is required when, for example, the
                     final text is not yet available. Dummy text is also known as 'fill text'.</p>
 
-                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2">Read More</a>
+                <a class="link link-primary" href="https://medium.com/@sandeepgopan/hello-world-7ab9c30983c2" target="_blank" rel="noopener noreferrer">Read More</a>
             </article>
 
         </li>
@@ -58,12 +58,12 @@
         <div class="footer-header">Contact</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link-logo" href="https://github.com/sandeepgopan"><img src="/images/icons8-github.svg" /></a>
+                <a class="link-logo" href="https://github.com/sandeepgopan" target="_blank" rel="noopener noreferrer"><img src="/images/icons8-github.svg" /></a>
 
             </li>
             <i class="logo-github"></i>
             <li class="list-item-inline">
-                <a class="link-logo" href="https://www.linkedin.com/in/sandeepgopan/"><img src="images/linkedin.svg" />
+                <a class="link-logo" href="https://www.linkedin.com/in/sandeepgopan/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.svg" />
                 </a>
             </li>
             <li class="list-item-inline">
