--- a/dummy-blog.html
+++ b/dummy-blog.html
@@ -65,17 +65,17 @@
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/sandeepgopan">
+                <a class="link" href="https://github.com/sandeepgopan" target="_blank" rel="noopener noreferrer">
                     github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/sandeepgopan">
+                <a class="link" href="https://twitter.com/sandeepgopan" target="_blank" rel="noopener noreferrer">
                     twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://linkedin.com/in/sandeepgopan">
+                <a class="link" href="https://linkedin.com/in/sandeepgopan" target="_blank" rel="noopener noreferrer">
                     linkedin
                 </a>
             </li>
