--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <div class="footer-header">Contact</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link-logo" href="https://github.com/sandeepgopan"><img src="images/icons8-github.svg" /></a>
+                <a class="link-logo" href="https://github.com/sandeepgopan" target="_blank" rel="noopener noreferrer"><img src="images/icons8-github.svg" /></a>
 
             </li>
             <i class="logo-github"></i>
             <li class="list-item-inline">
-                <a class="link-logo" href="https://www.linkedin.com/in/sandeepgopan/"><img src="images/linkedin.svg" />
+                <a class="link-logo" href="https://www.linkedin.com/in/sandeepgopan/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin.svg" />
                 </a>
             </li>
             <li class="list-item-inline">
